--- a/package.json
+++ b/package.json
@@ -3,108 +3,108 @@
   "license": "UNLICENSED",
   "type": "module",
   "dependencies": {
-    "@hilla/form": "2.5.5",
-    "@hilla/frontend": "2.5.5",
-    "@hilla/generator-typescript-cli": "2.5.5",
-    "@hilla/generator-typescript-core": "2.5.5",
-    "@hilla/generator-typescript-plugin-backbone": "2.5.5",
-    "@hilla/generator-typescript-plugin-barrel": "2.5.5",
-    "@hilla/generator-typescript-plugin-client": "2.5.5",
-    "@hilla/generator-typescript-plugin-model": "2.5.5",
-    "@hilla/generator-typescript-plugin-push": "2.5.5",
-    "@hilla/generator-typescript-plugin-subtypes": "2.5.5",
-    "@hilla/generator-typescript-utils": "2.5.5",
-    "@hilla/react-auth": "2.5.5",
+    "@hilla/form": "2.5.2",
+    "@hilla/frontend": "2.5.2",
+    "@hilla/generator-typescript-cli": "2.5.2",
+    "@hilla/generator-typescript-core": "2.5.2",
+    "@hilla/generator-typescript-plugin-backbone": "2.5.2",
+    "@hilla/generator-typescript-plugin-barrel": "2.5.2",
+    "@hilla/generator-typescript-plugin-client": "2.5.2",
+    "@hilla/generator-typescript-plugin-model": "2.5.2",
+    "@hilla/generator-typescript-plugin-push": "2.5.2",
+    "@hilla/generator-typescript-plugin-subtypes": "2.5.2",
+    "@hilla/generator-typescript-utils": "2.5.2",
+    "@hilla/react-auth": "2.5.2",
     "@hilla/react-components": "2.3.0",
-    "@hilla/react-crud": "2.5.5",
-    "@hilla/react-form": "2.5.5",
+    "@hilla/react-crud": "2.5.2",
+    "@hilla/react-form": "2.5.2",
     "@polymer/polymer": "3.5.1",
-    "@types/react": "18.2.37",
-    "@types/react-dom": "18.2.15",
+    "@types/react": "18.2.48",
+    "@types/react-dom": "18.2.18",
     "@vaadin-component-factory/vcf-nav": "1.1.0",
-    "@vaadin/accordion": "24.3.2",
-    "@vaadin/app-layout": "24.3.2",
-    "@vaadin/avatar": "24.3.2",
-    "@vaadin/avatar-group": "24.3.2",
-    "@vaadin/board": "24.3.2",
-    "@vaadin/bundles": "24.3.2",
-    "@vaadin/button": "24.3.2",
-    "@vaadin/charts": "24.3.2",
-    "@vaadin/checkbox": "24.3.2",
-    "@vaadin/checkbox-group": "24.3.2",
-    "@vaadin/combo-box": "24.3.2",
+    "@vaadin/accordion": "24.4.0-alpha8",
+    "@vaadin/app-layout": "24.4.0-alpha8",
+    "@vaadin/avatar": "24.4.0-alpha8",
+    "@vaadin/avatar-group": "24.4.0-alpha8",
+    "@vaadin/board": "24.4.0-alpha8",
+    "@vaadin/bundles": "24.4.0-alpha8",
+    "@vaadin/button": "24.4.0-alpha8",
+    "@vaadin/charts": "24.4.0-alpha8",
+    "@vaadin/checkbox": "24.4.0-alpha8",
+    "@vaadin/checkbox-group": "24.4.0-alpha8",
+    "@vaadin/combo-box": "24.4.0-alpha8",
     "@vaadin/common-frontend": "0.0.19",
-    "@vaadin/confirm-dialog": "24.3.2",
-    "@vaadin/context-menu": "24.3.2",
-    "@vaadin/cookie-consent": "24.3.2",
-    "@vaadin/crud": "24.3.2",
-    "@vaadin/custom-field": "24.3.2",
-    "@vaadin/date-picker": "24.3.2",
-    "@vaadin/date-time-picker": "24.3.2",
-    "@vaadin/details": "24.3.2",
-    "@vaadin/dialog": "24.3.2",
-    "@vaadin/email-field": "24.3.2",
-    "@vaadin/field-highlighter": "24.3.2",
-    "@vaadin/form-layout": "24.3.2",
-    "@vaadin/grid": "24.3.2",
-    "@vaadin/grid-pro": "24.3.2",
-    "@vaadin/horizontal-layout": "24.3.2",
-    "@vaadin/icon": "24.3.2",
-    "@vaadin/icons": "24.3.2",
-    "@vaadin/integer-field": "24.3.2",
-    "@vaadin/item": "24.3.2",
-    "@vaadin/list-box": "24.3.2",
-    "@vaadin/login": "24.3.2",
-    "@vaadin/map": "24.3.2",
-    "@vaadin/menu-bar": "24.3.2",
-    "@vaadin/message-input": "24.3.2",
-    "@vaadin/message-list": "24.3.2",
-    "@vaadin/multi-select-combo-box": "24.3.2",
-    "@vaadin/notification": "24.3.2",
-    "@vaadin/number-field": "24.3.2",
-    "@vaadin/password-field": "24.3.2",
-    "@vaadin/polymer-legacy-adapter": "24.3.2",
-    "@vaadin/progress-bar": "24.3.2",
-    "@vaadin/radio-group": "24.3.2",
-    "@vaadin/rich-text-editor": "24.3.2",
-    "@vaadin/scroller": "24.3.2",
-    "@vaadin/select": "24.3.2",
-    "@vaadin/side-nav": "24.3.2",
-    "@vaadin/split-layout": "24.3.2",
-    "@vaadin/tabs": "24.3.2",
-    "@vaadin/tabsheet": "24.3.2",
-    "@vaadin/text-area": "24.3.2",
-    "@vaadin/text-field": "24.3.2",
-    "@vaadin/time-picker": "24.3.2",
-    "@vaadin/tooltip": "24.3.2",
-    "@vaadin/upload": "24.3.2",
-    "@vaadin/vertical-layout": "24.3.2",
-    "@vaadin/virtual-list": "24.3.2",
+    "@vaadin/confirm-dialog": "24.4.0-alpha8",
+    "@vaadin/context-menu": "24.4.0-alpha8",
+    "@vaadin/cookie-consent": "24.4.0-alpha8",
+    "@vaadin/crud": "24.4.0-alpha8",
+    "@vaadin/custom-field": "24.4.0-alpha8",
+    "@vaadin/date-picker": "24.4.0-alpha8",
+    "@vaadin/date-time-picker": "24.4.0-alpha8",
+    "@vaadin/details": "24.4.0-alpha8",
+    "@vaadin/dialog": "24.4.0-alpha8",
+    "@vaadin/email-field": "24.4.0-alpha8",
+    "@vaadin/field-highlighter": "24.4.0-alpha8",
+    "@vaadin/form-layout": "24.4.0-alpha8",
+    "@vaadin/grid": "24.4.0-alpha8",
+    "@vaadin/grid-pro": "24.4.0-alpha8",
+    "@vaadin/horizontal-layout": "24.4.0-alpha8",
+    "@vaadin/icon": "24.4.0-alpha8",
+    "@vaadin/icons": "24.4.0-alpha8",
+    "@vaadin/integer-field": "24.4.0-alpha8",
+    "@vaadin/item": "24.4.0-alpha8",
+    "@vaadin/list-box": "24.4.0-alpha8",
+    "@vaadin/login": "24.4.0-alpha8",
+    "@vaadin/map": "24.4.0-alpha8",
+    "@vaadin/menu-bar": "24.4.0-alpha8",
+    "@vaadin/message-input": "24.4.0-alpha8",
+    "@vaadin/message-list": "24.4.0-alpha8",
+    "@vaadin/multi-select-combo-box": "24.4.0-alpha8",
+    "@vaadin/notification": "24.4.0-alpha8",
+    "@vaadin/number-field": "24.4.0-alpha8",
+    "@vaadin/password-field": "24.4.0-alpha8",
+    "@vaadin/polymer-legacy-adapter": "24.4.0-alpha8",
+    "@vaadin/progress-bar": "24.4.0-alpha8",
+    "@vaadin/radio-group": "24.4.0-alpha8",
+    "@vaadin/rich-text-editor": "24.4.0-alpha8",
+    "@vaadin/scroller": "24.4.0-alpha8",
+    "@vaadin/select": "24.4.0-alpha8",
+    "@vaadin/side-nav": "24.4.0-alpha8",
+    "@vaadin/split-layout": "24.4.0-alpha8",
+    "@vaadin/tabs": "24.4.0-alpha8",
+    "@vaadin/tabsheet": "24.4.0-alpha8",
+    "@vaadin/text-area": "24.4.0-alpha8",
+    "@vaadin/text-field": "24.4.0-alpha8",
+    "@vaadin/time-picker": "24.4.0-alpha8",
+    "@vaadin/tooltip": "24.4.0-alpha8",
+    "@vaadin/upload": "24.4.0-alpha8",
+    "@vaadin/vertical-layout": "24.4.0-alpha8",
+    "@vaadin/virtual-list": "24.4.0-alpha8",
     "classnames": "^2.3.2",
     "construct-style-sheets-polyfill": "3.1.0",
     "date-fns": "2.29.3",
-    "lit": "3.1.0",
+    "lit": "3.1.1",
     "proj4": "2.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "6.18.0"
+    "react-router-dom": "6.21.2"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7",
     "@lit-labs/react": "^1.1.0",
-    "@rollup/plugin-replace": "5.0.4",
-    "@rollup/pluginutils": "5.0.5",
+    "@rollup/plugin-replace": "5.0.5",
+    "@rollup/pluginutils": "5.1.0",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
-    "@vitejs/plugin-react": "4.2.0",
-    "@vitejs/plugin-react-swc": "3.5.0",
-    "async": "3.2.4",
-    "glob": "10.3.3",
+    "@vitejs/plugin-react": "4.2.1",
+    "async": "3.2.5",
+    "glob": "10.3.10",
     "rollup-plugin-brotli": "3.1.0",
-    "rollup-plugin-visualizer": "5.9.2",
+    "rollup-plugin-visualizer": "5.12.0",
     "strip-css-comments": "5.0.0",
     "transform-ast": "2.4.4",
     "typescript": "5.3.3",
-    "vite": "5.0.6",
+    "vite": "5.0.12",
     "vite-plugin-checker": "0.6.2",
     "workbox-build": "7.0.0",
     "workbox-core": "7.0.0",
@@ -199,108 +199,108 @@
   },
   "vaadin": {
     "dependencies": {
-      "@hilla/form": "2.5.5",
-      "@hilla/frontend": "2.5.5",
-      "@hilla/generator-typescript-cli": "2.5.5",
-      "@hilla/generator-typescript-core": "2.5.5",
-      "@hilla/generator-typescript-plugin-backbone": "2.5.5",
-      "@hilla/generator-typescript-plugin-barrel": "2.5.5",
-      "@hilla/generator-typescript-plugin-client": "2.5.5",
-      "@hilla/generator-typescript-plugin-model": "2.5.5",
-      "@hilla/generator-typescript-plugin-push": "2.5.5",
-      "@hilla/generator-typescript-plugin-subtypes": "2.5.5",
-      "@hilla/generator-typescript-utils": "2.5.5",
-      "@hilla/react-auth": "2.5.5",
+      "@hilla/form": "2.5.2",
+      "@hilla/frontend": "2.5.2",
+      "@hilla/generator-typescript-cli": "2.5.2",
+      "@hilla/generator-typescript-core": "2.5.2",
+      "@hilla/generator-typescript-plugin-backbone": "2.5.2",
+      "@hilla/generator-typescript-plugin-barrel": "2.5.2",
+      "@hilla/generator-typescript-plugin-client": "2.5.2",
+      "@hilla/generator-typescript-plugin-model": "2.5.2",
+      "@hilla/generator-typescript-plugin-push": "2.5.2",
+      "@hilla/generator-typescript-plugin-subtypes": "2.5.2",
+      "@hilla/generator-typescript-utils": "2.5.2",
+      "@hilla/react-auth": "2.5.2",
       "@hilla/react-components": "2.3.0",
-      "@hilla/react-crud": "2.5.5",
-      "@hilla/react-form": "2.5.5",
+      "@hilla/react-crud": "2.5.2",
+      "@hilla/react-form": "2.5.2",
       "@polymer/polymer": "3.5.1",
-      "@types/react": "18.2.37",
-      "@types/react-dom": "18.2.15",
-      "@vaadin/accordion": "24.3.2",
-      "@vaadin/app-layout": "24.3.2",
-      "@vaadin/avatar": "24.3.2",
-      "@vaadin/avatar-group": "24.3.2",
-      "@vaadin/board": "24.3.2",
-      "@vaadin/bundles": "24.3.2",
-      "@vaadin/button": "24.3.2",
-      "@vaadin/charts": "24.3.2",
-      "@vaadin/checkbox": "24.3.2",
-      "@vaadin/checkbox-group": "24.3.2",
-      "@vaadin/combo-box": "24.3.2",
+      "@types/react": "18.2.48",
+      "@types/react-dom": "18.2.18",
+      "@vaadin/accordion": "24.4.0-alpha8",
+      "@vaadin/app-layout": "24.4.0-alpha8",
+      "@vaadin/avatar": "24.4.0-alpha8",
+      "@vaadin/avatar-group": "24.4.0-alpha8",
+      "@vaadin/board": "24.4.0-alpha8",
+      "@vaadin/bundles": "24.4.0-alpha8",
+      "@vaadin/button": "24.4.0-alpha8",
+      "@vaadin/charts": "24.4.0-alpha8",
+      "@vaadin/checkbox": "24.4.0-alpha8",
+      "@vaadin/checkbox-group": "24.4.0-alpha8",
+      "@vaadin/combo-box": "24.4.0-alpha8",
       "@vaadin/common-frontend": "0.0.19",
-      "@vaadin/confirm-dialog": "24.3.2",
-      "@vaadin/context-menu": "24.3.2",
-      "@vaadin/cookie-consent": "24.3.2",
-      "@vaadin/crud": "24.3.2",
-      "@vaadin/custom-field": "24.3.2",
-      "@vaadin/date-picker": "24.3.2",
-      "@vaadin/date-time-picker": "24.3.2",
-      "@vaadin/details": "24.3.2",
-      "@vaadin/dialog": "24.3.2",
-      "@vaadin/email-field": "24.3.2",
-      "@vaadin/field-highlighter": "24.3.2",
-      "@vaadin/form-layout": "24.3.2",
-      "@vaadin/grid": "24.3.2",
-      "@vaadin/grid-pro": "24.3.2",
-      "@vaadin/horizontal-layout": "24.3.2",
-      "@vaadin/icon": "24.3.2",
-      "@vaadin/icons": "24.3.2",
-      "@vaadin/integer-field": "24.3.2",
-      "@vaadin/item": "24.3.2",
-      "@vaadin/list-box": "24.3.2",
-      "@vaadin/login": "24.3.2",
-      "@vaadin/map": "24.3.2",
-      "@vaadin/menu-bar": "24.3.2",
-      "@vaadin/message-input": "24.3.2",
-      "@vaadin/message-list": "24.3.2",
-      "@vaadin/multi-select-combo-box": "24.3.2",
-      "@vaadin/notification": "24.3.2",
-      "@vaadin/number-field": "24.3.2",
-      "@vaadin/password-field": "24.3.2",
-      "@vaadin/polymer-legacy-adapter": "24.3.2",
-      "@vaadin/progress-bar": "24.3.2",
-      "@vaadin/radio-group": "24.3.2",
-      "@vaadin/rich-text-editor": "24.3.2",
-      "@vaadin/scroller": "24.3.2",
-      "@vaadin/select": "24.3.2",
-      "@vaadin/side-nav": "24.3.2",
-      "@vaadin/split-layout": "24.3.2",
-      "@vaadin/tabs": "24.3.2",
-      "@vaadin/tabsheet": "24.3.2",
-      "@vaadin/text-area": "24.3.2",
-      "@vaadin/text-field": "24.3.2",
-      "@vaadin/time-picker": "24.3.2",
-      "@vaadin/tooltip": "24.3.2",
-      "@vaadin/upload": "24.3.2",
-      "@vaadin/vertical-layout": "24.3.2",
-      "@vaadin/virtual-list": "24.3.2",
+      "@vaadin/confirm-dialog": "24.4.0-alpha8",
+      "@vaadin/context-menu": "24.4.0-alpha8",
+      "@vaadin/cookie-consent": "24.4.0-alpha8",
+      "@vaadin/crud": "24.4.0-alpha8",
+      "@vaadin/custom-field": "24.4.0-alpha8",
+      "@vaadin/date-picker": "24.4.0-alpha8",
+      "@vaadin/date-time-picker": "24.4.0-alpha8",
+      "@vaadin/details": "24.4.0-alpha8",
+      "@vaadin/dialog": "24.4.0-alpha8",
+      "@vaadin/email-field": "24.4.0-alpha8",
+      "@vaadin/field-highlighter": "24.4.0-alpha8",
+      "@vaadin/form-layout": "24.4.0-alpha8",
+      "@vaadin/grid": "24.4.0-alpha8",
+      "@vaadin/grid-pro": "24.4.0-alpha8",
+      "@vaadin/horizontal-layout": "24.4.0-alpha8",
+      "@vaadin/icon": "24.4.0-alpha8",
+      "@vaadin/icons": "24.4.0-alpha8",
+      "@vaadin/integer-field": "24.4.0-alpha8",
+      "@vaadin/item": "24.4.0-alpha8",
+      "@vaadin/list-box": "24.4.0-alpha8",
+      "@vaadin/login": "24.4.0-alpha8",
+      "@vaadin/map": "24.4.0-alpha8",
+      "@vaadin/menu-bar": "24.4.0-alpha8",
+      "@vaadin/message-input": "24.4.0-alpha8",
+      "@vaadin/message-list": "24.4.0-alpha8",
+      "@vaadin/multi-select-combo-box": "24.4.0-alpha8",
+      "@vaadin/notification": "24.4.0-alpha8",
+      "@vaadin/number-field": "24.4.0-alpha8",
+      "@vaadin/password-field": "24.4.0-alpha8",
+      "@vaadin/polymer-legacy-adapter": "24.4.0-alpha8",
+      "@vaadin/progress-bar": "24.4.0-alpha8",
+      "@vaadin/radio-group": "24.4.0-alpha8",
+      "@vaadin/rich-text-editor": "24.4.0-alpha8",
+      "@vaadin/scroller": "24.4.0-alpha8",
+      "@vaadin/select": "24.4.0-alpha8",
+      "@vaadin/side-nav": "24.4.0-alpha8",
+      "@vaadin/split-layout": "24.4.0-alpha8",
+      "@vaadin/tabs": "24.4.0-alpha8",
+      "@vaadin/tabsheet": "24.4.0-alpha8",
+      "@vaadin/text-area": "24.4.0-alpha8",
+      "@vaadin/text-field": "24.4.0-alpha8",
+      "@vaadin/time-picker": "24.4.0-alpha8",
+      "@vaadin/tooltip": "24.4.0-alpha8",
+      "@vaadin/upload": "24.4.0-alpha8",
+      "@vaadin/vertical-layout": "24.4.0-alpha8",
+      "@vaadin/virtual-list": "24.4.0-alpha8",
       "construct-style-sheets-polyfill": "3.1.0",
       "date-fns": "2.29.3",
-      "lit": "3.1.0",
+      "lit": "3.1.1",
       "proj4": "2.9.2",
       "react": "18.2.0",
       "react-dom": "18.2.0",
-      "react-router-dom": "6.18.0"
+      "react-router-dom": "6.21.2"
     },
     "devDependencies": {
-      "@rollup/plugin-replace": "5.0.4",
-      "@rollup/pluginutils": "5.0.5",
-      "@vitejs/plugin-react": "4.2.0",
-      "@vitejs/plugin-react-swc": "3.5.0",
-      "async": "3.2.4",
-      "glob": "10.3.3",
+      "@babel/preset-react": "^7",
+      "@rollup/plugin-replace": "5.0.5",
+      "@rollup/pluginutils": "5.1.0",
+      "@vitejs/plugin-react": "4.2.1",
+      "async": "3.2.5",
+      "glob": "10.3.10",
       "rollup-plugin-brotli": "3.1.0",
-      "rollup-plugin-visualizer": "5.9.2",
+      "rollup-plugin-visualizer": "5.12.0",
       "strip-css-comments": "5.0.0",
       "transform-ast": "2.4.4",
       "typescript": "5.3.3",
-      "vite": "5.0.6",
+      "vite": "5.0.12",
       "vite-plugin-checker": "0.6.2",
       "workbox-build": "7.0.0",
       "workbox-core": "7.0.0",
       "workbox-precaching": "7.0.0"
     },
-    "hash": "31f12cc8dbd97000e67a8f75a731d03445badd4cb656fe5cb916c6cc969fbfad"
+    "hash": "ef2581da4762847ee64f412411818a0cef6d849c8ffe28fd775b3aa1d8ed34ed"
   }
 }
