--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
 
     <properties>
         <java.version>17</java.version>
-        <vaadin.version>24.3.2</vaadin.version>
-        <hilla.version>2.5.5</hilla.version>
+        <vaadin.version>24.4-SNAPSHOT</vaadin.version>
+        <hilla.version>24.4-SNAPSHOT</hilla.version>
     </properties>
 
     <parent>
@@ -50,13 +50,6 @@
 
     <dependencyManagement>
         <dependencies>
-            <dependency>
-                <groupId>com.vaadin</groupId>
-                <artifactId>flow-bom</artifactId>
-                <version>24.3-SNAPSHOT</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
             <dependency>
                 <groupId>com.vaadin</groupId>
                 <artifactId>vaadin-bom</artifactId>
