--- a/package.json
+++ b/package.json
@@ -4,94 +4,92 @@
   "type": "module",
   "dependencies": {
     "@polymer/polymer": "3.5.1",
-    "@types/react": "18.2.50",
-    "@types/react-dom": "18.2.18",
     "@vaadin-component-factory/vcf-nav": "1.1.0",
-    "@vaadin/a11y-base": "24.4.0-alpha12",
-    "@vaadin/accordion": "24.4.0-alpha12",
-    "@vaadin/app-layout": "24.4.0-alpha12",
-    "@vaadin/avatar": "24.4.0-alpha12",
-    "@vaadin/avatar-group": "24.4.0-alpha12",
-    "@vaadin/board": "24.4.0-alpha12",
-    "@vaadin/bundles": "24.4.0-alpha12",
-    "@vaadin/button": "24.4.0-alpha12",
-    "@vaadin/charts": "24.4.0-alpha12",
-    "@vaadin/checkbox": "24.4.0-alpha12",
-    "@vaadin/checkbox-group": "24.4.0-alpha12",
-    "@vaadin/combo-box": "24.4.0-alpha12",
+    "@vaadin/a11y-base": "24.4.0-alpha13",
+    "@vaadin/accordion": "24.4.0-alpha13",
+    "@vaadin/app-layout": "24.4.0-alpha13",
+    "@vaadin/avatar": "24.4.0-alpha13",
+    "@vaadin/avatar-group": "24.4.0-alpha13",
+    "@vaadin/board": "24.4.0-alpha13",
+    "@vaadin/bundles": "24.4.0-alpha13",
+    "@vaadin/button": "24.4.0-alpha13",
+    "@vaadin/charts": "24.4.0-alpha13",
+    "@vaadin/checkbox": "24.4.0-alpha13",
+    "@vaadin/checkbox-group": "24.4.0-alpha13",
+    "@vaadin/combo-box": "24.4.0-alpha13",
     "@vaadin/common-frontend": "0.0.19",
-    "@vaadin/component-base": "24.4.0-alpha12",
-    "@vaadin/confirm-dialog": "24.4.0-alpha12",
-    "@vaadin/context-menu": "24.4.0-alpha12",
-    "@vaadin/cookie-consent": "24.4.0-alpha12",
-    "@vaadin/crud": "24.4.0-alpha12",
-    "@vaadin/custom-field": "24.4.0-alpha12",
-    "@vaadin/date-picker": "24.4.0-alpha12",
-    "@vaadin/date-time-picker": "24.4.0-alpha12",
-    "@vaadin/details": "24.4.0-alpha12",
-    "@vaadin/dialog": "24.4.0-alpha12",
-    "@vaadin/email-field": "24.4.0-alpha12",
-    "@vaadin/field-base": "24.4.0-alpha12",
-    "@vaadin/field-highlighter": "24.4.0-alpha12",
-    "@vaadin/form-layout": "24.4.0-alpha12",
-    "@vaadin/grid": "24.4.0-alpha12",
-    "@vaadin/grid-pro": "24.4.0-alpha12",
-    "@vaadin/hilla-core": "24.4.0-alpha3",
-    "@vaadin/hilla-generator-cli": "24.4.0-alpha3",
-    "@vaadin/hilla-generator-core": "24.4.0-alpha3",
-    "@vaadin/hilla-generator-plugin-backbone": "24.4.0-alpha3",
-    "@vaadin/hilla-generator-plugin-barrel": "24.4.0-alpha3",
-    "@vaadin/hilla-generator-plugin-client": "24.4.0-alpha3",
-    "@vaadin/hilla-generator-plugin-model": "24.4.0-alpha3",
-    "@vaadin/hilla-generator-plugin-push": "24.4.0-alpha3",
-    "@vaadin/hilla-generator-plugin-subtypes": "24.4.0-alpha3",
-    "@vaadin/hilla-generator-utils": "24.4.0-alpha3",
+    "@vaadin/component-base": "24.4.0-alpha13",
+    "@vaadin/confirm-dialog": "24.4.0-alpha13",
+    "@vaadin/context-menu": "24.4.0-alpha13",
+    "@vaadin/cookie-consent": "24.4.0-alpha13",
+    "@vaadin/crud": "24.4.0-alpha13",
+    "@vaadin/custom-field": "24.4.0-alpha13",
+    "@vaadin/date-picker": "24.4.0-alpha13",
+    "@vaadin/date-time-picker": "24.4.0-alpha13",
+    "@vaadin/details": "24.4.0-alpha13",
+    "@vaadin/dialog": "24.4.0-alpha13",
+    "@vaadin/email-field": "24.4.0-alpha13",
+    "@vaadin/field-base": "24.4.0-alpha13",
+    "@vaadin/field-highlighter": "24.4.0-alpha13",
+    "@vaadin/form-layout": "24.4.0-alpha13",
+    "@vaadin/grid": "24.4.0-alpha13",
+    "@vaadin/grid-pro": "24.4.0-alpha13",
+    "@vaadin/hilla-frontend": "24.4.0-alpha4",
+    "@vaadin/hilla-generator-cli": "24.4.0-alpha4",
+    "@vaadin/hilla-generator-core": "24.4.0-alpha4",
+    "@vaadin/hilla-generator-plugin-backbone": "24.4.0-alpha4",
+    "@vaadin/hilla-generator-plugin-barrel": "24.4.0-alpha4",
+    "@vaadin/hilla-generator-plugin-client": "24.4.0-alpha4",
+    "@vaadin/hilla-generator-plugin-model": "24.4.0-alpha4",
+    "@vaadin/hilla-generator-plugin-push": "24.4.0-alpha4",
+    "@vaadin/hilla-generator-plugin-subtypes": "24.4.0-alpha4",
+    "@vaadin/hilla-generator-utils": "24.4.0-alpha4",
     "@vaadin/hilla-lit-form": "24.4.0-alpha3",
     "@vaadin/hilla-react-auth": "24.4.0-alpha3",
     "@vaadin/hilla-react-crud": "24.4.0-alpha3",
     "@vaadin/hilla-react-form": "24.4.0-alpha3",
-    "@vaadin/horizontal-layout": "24.4.0-alpha12",
-    "@vaadin/icon": "24.4.0-alpha12",
-    "@vaadin/icons": "24.4.0-alpha12",
-    "@vaadin/input-container": "24.4.0-alpha12",
-    "@vaadin/integer-field": "24.4.0-alpha12",
-    "@vaadin/item": "24.4.0-alpha12",
-    "@vaadin/list-box": "24.4.0-alpha12",
-    "@vaadin/lit-renderer": "24.4.0-alpha12",
-    "@vaadin/login": "24.4.0-alpha12",
-    "@vaadin/map": "24.4.0-alpha12",
-    "@vaadin/menu-bar": "24.4.0-alpha12",
-    "@vaadin/message-input": "24.4.0-alpha12",
-    "@vaadin/message-list": "24.4.0-alpha12",
-    "@vaadin/multi-select-combo-box": "24.4.0-alpha12",
-    "@vaadin/notification": "24.4.0-alpha12",
-    "@vaadin/number-field": "24.4.0-alpha12",
-    "@vaadin/overlay": "24.4.0-alpha12",
-    "@vaadin/password-field": "24.4.0-alpha12",
-    "@vaadin/polymer-legacy-adapter": "24.4.0-alpha12",
-    "@vaadin/progress-bar": "24.4.0-alpha12",
-    "@vaadin/radio-group": "24.4.0-alpha12",
-    "@vaadin/react-components": "24.4.0-alpha12",
-    "@vaadin/rich-text-editor": "24.4.0-alpha12",
+    "@vaadin/horizontal-layout": "24.4.0-alpha13",
+    "@vaadin/icon": "24.4.0-alpha13",
+    "@vaadin/icons": "24.4.0-alpha13",
+    "@vaadin/input-container": "24.4.0-alpha13",
+    "@vaadin/integer-field": "24.4.0-alpha13",
+    "@vaadin/item": "24.4.0-alpha13",
+    "@vaadin/list-box": "24.4.0-alpha13",
+    "@vaadin/lit-renderer": "24.4.0-alpha13",
+    "@vaadin/login": "24.4.0-alpha13",
+    "@vaadin/map": "24.4.0-alpha13",
+    "@vaadin/menu-bar": "24.4.0-alpha13",
+    "@vaadin/message-input": "24.4.0-alpha13",
+    "@vaadin/message-list": "24.4.0-alpha13",
+    "@vaadin/multi-select-combo-box": "24.4.0-alpha13",
+    "@vaadin/notification": "24.4.0-alpha13",
+    "@vaadin/number-field": "24.4.0-alpha13",
+    "@vaadin/overlay": "24.4.0-alpha13",
+    "@vaadin/password-field": "24.4.0-alpha13",
+    "@vaadin/polymer-legacy-adapter": "24.4.0-alpha13",
+    "@vaadin/progress-bar": "24.4.0-alpha13",
+    "@vaadin/radio-group": "24.4.0-alpha13",
+    "@vaadin/react-components": "24.4.0-alpha13",
+    "@vaadin/rich-text-editor": "24.4.0-alpha13",
     "@vaadin/router": "1.7.5",
-    "@vaadin/scroller": "24.4.0-alpha12",
-    "@vaadin/select": "24.4.0-alpha12",
-    "@vaadin/side-nav": "24.4.0-alpha12",
-    "@vaadin/split-layout": "24.4.0-alpha12",
-    "@vaadin/tabs": "24.4.0-alpha12",
-    "@vaadin/tabsheet": "24.4.0-alpha12",
-    "@vaadin/text-area": "24.4.0-alpha12",
-    "@vaadin/text-field": "24.4.0-alpha12",
-    "@vaadin/time-picker": "24.4.0-alpha12",
-    "@vaadin/tooltip": "24.4.0-alpha12",
-    "@vaadin/upload": "24.4.0-alpha12",
+    "@vaadin/scroller": "24.4.0-alpha13",
+    "@vaadin/select": "24.4.0-alpha13",
+    "@vaadin/side-nav": "24.4.0-alpha13",
+    "@vaadin/split-layout": "24.4.0-alpha13",
+    "@vaadin/tabs": "24.4.0-alpha13",
+    "@vaadin/tabsheet": "24.4.0-alpha13",
+    "@vaadin/text-area": "24.4.0-alpha13",
+    "@vaadin/text-field": "24.4.0-alpha13",
+    "@vaadin/time-picker": "24.4.0-alpha13",
+    "@vaadin/tooltip": "24.4.0-alpha13",
+    "@vaadin/upload": "24.4.0-alpha13",
     "@vaadin/vaadin-development-mode-detector": "2.0.6",
-    "@vaadin/vaadin-lumo-styles": "24.4.0-alpha12",
-    "@vaadin/vaadin-material-styles": "24.4.0-alpha12",
-    "@vaadin/vaadin-themable-mixin": "24.4.0-alpha12",
+    "@vaadin/vaadin-lumo-styles": "24.4.0-alpha13",
+    "@vaadin/vaadin-material-styles": "24.4.0-alpha13",
+    "@vaadin/vaadin-themable-mixin": "24.4.0-alpha13",
     "@vaadin/vaadin-usage-statistics": "2.1.2",
-    "@vaadin/vertical-layout": "24.4.0-alpha12",
-    "@vaadin/virtual-list": "24.4.0-alpha12",
+    "@vaadin/vertical-layout": "24.4.0-alpha13",
+    "@vaadin/virtual-list": "24.4.0-alpha13",
     "classnames": "^2.3.2",
     "construct-style-sheets-polyfill": "3.1.0",
     "date-fns": "2.29.3",
@@ -99,15 +97,15 @@
     "proj4": "2.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "6.21.3"
+    "react-router-dom": "6.22.0"
   },
   "devDependencies": {
     "@babel/preset-react": "^7",
     "@lit-labs/react": "^1.1.0",
     "@rollup/plugin-replace": "5.0.5",
     "@rollup/pluginutils": "5.1.0",
-    "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.8",
+    "@types/react": "18.2.55",
+    "@types/react-dom": "18.2.19",
     "@vitejs/plugin-react": "4.2.1",
     "async": "3.2.5",
     "glob": "10.3.10",
@@ -116,7 +114,7 @@
     "strip-css-comments": "5.0.0",
     "transform-ast": "2.4.4",
     "typescript": "5.3.3",
-    "vite": "5.0.12",
+    "vite": "5.1.1",
     "vite-plugin-checker": "0.6.4",
     "workbox-build": "7.0.0",
     "workbox-core": "7.0.0",
@@ -201,7 +199,6 @@
     "@vaadin/hilla-generator-plugin-barrel": "$@vaadin/hilla-generator-plugin-barrel",
     "@vaadin/hilla-react-form": "$@vaadin/hilla-react-form",
     "@vaadin/hilla-generator-core": "$@vaadin/hilla-generator-core",
-    "@vaadin/hilla-core": "$@vaadin/hilla-core",
     "@vaadin/hilla-generator-plugin-push": "$@vaadin/hilla-generator-plugin-push",
     "@vaadin/hilla-generator-plugin-client": "$@vaadin/hilla-generator-plugin-client",
     "@vaadin/hilla-lit-form": "$@vaadin/hilla-lit-form",
@@ -219,110 +216,111 @@
     "@vaadin/vaadin-material-styles": "$@vaadin/vaadin-material-styles",
     "@vaadin/router": "$@vaadin/router",
     "@vaadin/vaadin-usage-statistics": "$@vaadin/vaadin-usage-statistics",
-    "@vaadin/vaadin-themable-mixin": "$@vaadin/vaadin-themable-mixin"
+    "@vaadin/vaadin-themable-mixin": "$@vaadin/vaadin-themable-mixin",
+    "@vaadin/hilla-frontend": "$@vaadin/hilla-frontend"
   },
   "vaadin": {
     "dependencies": {
       "@polymer/polymer": "3.5.1",
-      "@types/react": "18.2.50",
-      "@types/react-dom": "18.2.18",
-      "@vaadin/a11y-base": "24.4.0-alpha12",
-      "@vaadin/accordion": "24.4.0-alpha12",
-      "@vaadin/app-layout": "24.4.0-alpha12",
-      "@vaadin/avatar": "24.4.0-alpha12",
-      "@vaadin/avatar-group": "24.4.0-alpha12",
-      "@vaadin/board": "24.4.0-alpha12",
-      "@vaadin/bundles": "24.4.0-alpha12",
-      "@vaadin/button": "24.4.0-alpha12",
-      "@vaadin/charts": "24.4.0-alpha12",
-      "@vaadin/checkbox": "24.4.0-alpha12",
-      "@vaadin/checkbox-group": "24.4.0-alpha12",
-      "@vaadin/combo-box": "24.4.0-alpha12",
+      "@vaadin/a11y-base": "24.4.0-alpha13",
+      "@vaadin/accordion": "24.4.0-alpha13",
+      "@vaadin/app-layout": "24.4.0-alpha13",
+      "@vaadin/avatar": "24.4.0-alpha13",
+      "@vaadin/avatar-group": "24.4.0-alpha13",
+      "@vaadin/board": "24.4.0-alpha13",
+      "@vaadin/bundles": "24.4.0-alpha13",
+      "@vaadin/button": "24.4.0-alpha13",
+      "@vaadin/charts": "24.4.0-alpha13",
+      "@vaadin/checkbox": "24.4.0-alpha13",
+      "@vaadin/checkbox-group": "24.4.0-alpha13",
+      "@vaadin/combo-box": "24.4.0-alpha13",
       "@vaadin/common-frontend": "0.0.19",
-      "@vaadin/component-base": "24.4.0-alpha12",
-      "@vaadin/confirm-dialog": "24.4.0-alpha12",
-      "@vaadin/context-menu": "24.4.0-alpha12",
-      "@vaadin/cookie-consent": "24.4.0-alpha12",
-      "@vaadin/crud": "24.4.0-alpha12",
-      "@vaadin/custom-field": "24.4.0-alpha12",
-      "@vaadin/date-picker": "24.4.0-alpha12",
-      "@vaadin/date-time-picker": "24.4.0-alpha12",
-      "@vaadin/details": "24.4.0-alpha12",
-      "@vaadin/dialog": "24.4.0-alpha12",
-      "@vaadin/email-field": "24.4.0-alpha12",
-      "@vaadin/field-base": "24.4.0-alpha12",
-      "@vaadin/field-highlighter": "24.4.0-alpha12",
-      "@vaadin/form-layout": "24.4.0-alpha12",
-      "@vaadin/grid": "24.4.0-alpha12",
-      "@vaadin/grid-pro": "24.4.0-alpha12",
-      "@vaadin/hilla-core": "24.4.0-alpha3",
-      "@vaadin/hilla-generator-cli": "24.4.0-alpha3",
-      "@vaadin/hilla-generator-core": "24.4.0-alpha3",
-      "@vaadin/hilla-generator-plugin-backbone": "24.4.0-alpha3",
-      "@vaadin/hilla-generator-plugin-barrel": "24.4.0-alpha3",
-      "@vaadin/hilla-generator-plugin-client": "24.4.0-alpha3",
-      "@vaadin/hilla-generator-plugin-model": "24.4.0-alpha3",
-      "@vaadin/hilla-generator-plugin-push": "24.4.0-alpha3",
-      "@vaadin/hilla-generator-plugin-subtypes": "24.4.0-alpha3",
-      "@vaadin/hilla-generator-utils": "24.4.0-alpha3",
+      "@vaadin/component-base": "24.4.0-alpha13",
+      "@vaadin/confirm-dialog": "24.4.0-alpha13",
+      "@vaadin/context-menu": "24.4.0-alpha13",
+      "@vaadin/cookie-consent": "24.4.0-alpha13",
+      "@vaadin/crud": "24.4.0-alpha13",
+      "@vaadin/custom-field": "24.4.0-alpha13",
+      "@vaadin/date-picker": "24.4.0-alpha13",
+      "@vaadin/date-time-picker": "24.4.0-alpha13",
+      "@vaadin/details": "24.4.0-alpha13",
+      "@vaadin/dialog": "24.4.0-alpha13",
+      "@vaadin/email-field": "24.4.0-alpha13",
+      "@vaadin/field-base": "24.4.0-alpha13",
+      "@vaadin/field-highlighter": "24.4.0-alpha13",
+      "@vaadin/form-layout": "24.4.0-alpha13",
+      "@vaadin/grid": "24.4.0-alpha13",
+      "@vaadin/grid-pro": "24.4.0-alpha13",
+      "@vaadin/hilla-frontend": "24.4.0-alpha4",
+      "@vaadin/hilla-generator-cli": "24.4.0-alpha4",
+      "@vaadin/hilla-generator-core": "24.4.0-alpha4",
+      "@vaadin/hilla-generator-plugin-backbone": "24.4.0-alpha4",
+      "@vaadin/hilla-generator-plugin-barrel": "24.4.0-alpha4",
+      "@vaadin/hilla-generator-plugin-client": "24.4.0-alpha4",
+      "@vaadin/hilla-generator-plugin-model": "24.4.0-alpha4",
+      "@vaadin/hilla-generator-plugin-push": "24.4.0-alpha4",
+      "@vaadin/hilla-generator-plugin-subtypes": "24.4.0-alpha4",
+      "@vaadin/hilla-generator-utils": "24.4.0-alpha4",
       "@vaadin/hilla-lit-form": "24.4.0-alpha3",
       "@vaadin/hilla-react-auth": "24.4.0-alpha3",
       "@vaadin/hilla-react-crud": "24.4.0-alpha3",
       "@vaadin/hilla-react-form": "24.4.0-alpha3",
-      "@vaadin/horizontal-layout": "24.4.0-alpha12",
-      "@vaadin/icon": "24.4.0-alpha12",
-      "@vaadin/icons": "24.4.0-alpha12",
-      "@vaadin/input-container": "24.4.0-alpha12",
-      "@vaadin/integer-field": "24.4.0-alpha12",
-      "@vaadin/item": "24.4.0-alpha12",
-      "@vaadin/list-box": "24.4.0-alpha12",
-      "@vaadin/lit-renderer": "24.4.0-alpha12",
-      "@vaadin/login": "24.4.0-alpha12",
-      "@vaadin/map": "24.4.0-alpha12",
-      "@vaadin/menu-bar": "24.4.0-alpha12",
-      "@vaadin/message-input": "24.4.0-alpha12",
-      "@vaadin/message-list": "24.4.0-alpha12",
-      "@vaadin/multi-select-combo-box": "24.4.0-alpha12",
-      "@vaadin/notification": "24.4.0-alpha12",
-      "@vaadin/number-field": "24.4.0-alpha12",
-      "@vaadin/overlay": "24.4.0-alpha12",
-      "@vaadin/password-field": "24.4.0-alpha12",
-      "@vaadin/polymer-legacy-adapter": "24.4.0-alpha12",
-      "@vaadin/progress-bar": "24.4.0-alpha12",
-      "@vaadin/radio-group": "24.4.0-alpha12",
-      "@vaadin/react-components": "24.4.0-alpha12",
-      "@vaadin/rich-text-editor": "24.4.0-alpha12",
+      "@vaadin/horizontal-layout": "24.4.0-alpha13",
+      "@vaadin/icon": "24.4.0-alpha13",
+      "@vaadin/icons": "24.4.0-alpha13",
+      "@vaadin/input-container": "24.4.0-alpha13",
+      "@vaadin/integer-field": "24.4.0-alpha13",
+      "@vaadin/item": "24.4.0-alpha13",
+      "@vaadin/list-box": "24.4.0-alpha13",
+      "@vaadin/lit-renderer": "24.4.0-alpha13",
+      "@vaadin/login": "24.4.0-alpha13",
+      "@vaadin/map": "24.4.0-alpha13",
+      "@vaadin/menu-bar": "24.4.0-alpha13",
+      "@vaadin/message-input": "24.4.0-alpha13",
+      "@vaadin/message-list": "24.4.0-alpha13",
+      "@vaadin/multi-select-combo-box": "24.4.0-alpha13",
+      "@vaadin/notification": "24.4.0-alpha13",
+      "@vaadin/number-field": "24.4.0-alpha13",
+      "@vaadin/overlay": "24.4.0-alpha13",
+      "@vaadin/password-field": "24.4.0-alpha13",
+      "@vaadin/polymer-legacy-adapter": "24.4.0-alpha13",
+      "@vaadin/progress-bar": "24.4.0-alpha13",
+      "@vaadin/radio-group": "24.4.0-alpha13",
+      "@vaadin/react-components": "24.4.0-alpha13",
+      "@vaadin/rich-text-editor": "24.4.0-alpha13",
       "@vaadin/router": "1.7.5",
-      "@vaadin/scroller": "24.4.0-alpha12",
-      "@vaadin/select": "24.4.0-alpha12",
-      "@vaadin/side-nav": "24.4.0-alpha12",
-      "@vaadin/split-layout": "24.4.0-alpha12",
-      "@vaadin/tabs": "24.4.0-alpha12",
-      "@vaadin/tabsheet": "24.4.0-alpha12",
-      "@vaadin/text-area": "24.4.0-alpha12",
-      "@vaadin/text-field": "24.4.0-alpha12",
-      "@vaadin/time-picker": "24.4.0-alpha12",
-      "@vaadin/tooltip": "24.4.0-alpha12",
-      "@vaadin/upload": "24.4.0-alpha12",
+      "@vaadin/scroller": "24.4.0-alpha13",
+      "@vaadin/select": "24.4.0-alpha13",
+      "@vaadin/side-nav": "24.4.0-alpha13",
+      "@vaadin/split-layout": "24.4.0-alpha13",
+      "@vaadin/tabs": "24.4.0-alpha13",
+      "@vaadin/tabsheet": "24.4.0-alpha13",
+      "@vaadin/text-area": "24.4.0-alpha13",
+      "@vaadin/text-field": "24.4.0-alpha13",
+      "@vaadin/time-picker": "24.4.0-alpha13",
+      "@vaadin/tooltip": "24.4.0-alpha13",
+      "@vaadin/upload": "24.4.0-alpha13",
       "@vaadin/vaadin-development-mode-detector": "2.0.6",
-      "@vaadin/vaadin-lumo-styles": "24.4.0-alpha12",
-      "@vaadin/vaadin-material-styles": "24.4.0-alpha12",
-      "@vaadin/vaadin-themable-mixin": "24.4.0-alpha12",
+      "@vaadin/vaadin-lumo-styles": "24.4.0-alpha13",
+      "@vaadin/vaadin-material-styles": "24.4.0-alpha13",
+      "@vaadin/vaadin-themable-mixin": "24.4.0-alpha13",
       "@vaadin/vaadin-usage-statistics": "2.1.2",
-      "@vaadin/vertical-layout": "24.4.0-alpha12",
-      "@vaadin/virtual-list": "24.4.0-alpha12",
+      "@vaadin/vertical-layout": "24.4.0-alpha13",
+      "@vaadin/virtual-list": "24.4.0-alpha13",
       "construct-style-sheets-polyfill": "3.1.0",
       "date-fns": "2.29.3",
       "lit": "3.1.2",
       "proj4": "2.10.0",
       "react": "18.2.0",
       "react-dom": "18.2.0",
-      "react-router-dom": "6.21.3"
+      "react-router-dom": "6.22.0"
     },
     "devDependencies": {
       "@babel/preset-react": "^7",
       "@rollup/plugin-replace": "5.0.5",
       "@rollup/pluginutils": "5.1.0",
+      "@types/react": "18.2.55",
+      "@types/react-dom": "18.2.19",
       "@vitejs/plugin-react": "4.2.1",
       "async": "3.2.5",
       "glob": "10.3.10",
@@ -331,12 +329,12 @@
       "strip-css-comments": "5.0.0",
       "transform-ast": "2.4.4",
       "typescript": "5.3.3",
-      "vite": "5.0.12",
+      "vite": "5.1.1",
       "vite-plugin-checker": "0.6.4",
       "workbox-build": "7.0.0",
       "workbox-core": "7.0.0",
       "workbox-precaching": "7.0.0"
     },
-    "hash": "3bb3d42f0dd0ac82b1f2eb174af6d43a69683f5e1f0a2b4d61d8405caa2c9c98"
+    "hash": "33b685dacc0f5d24418e87b79dfdd15f64fa97aee3f5f452b927689f892a258a"
   }
 }
